[package]
name = "data-composer"
version = "1.0.1"
authors = ["pewpew79 <grigoriev.d3@mail.ru>"]
edition = "2018"


[dependencies]
serde_json = "1.0.48"
serde_yaml = "0.8.11"
log = "0.4.8"
mongodb = "0.3.12"
bson = "0.13.0"
data-finder = { git = "https://github.com/pewpew79/data-finder.git", branch = "master" }
data-getter = { git = "https://github.com/pewpew79/data-getter.git", branch = "master" }
