[package]
name = "data-composer"
version = "1.0.2"
authors = ["pewpew79 <grigoriev.d3@mail.ru>"]
edition = "2018"


[dependencies]
serde_json = "^1.0"
serde_yaml = "^0.8"
log = "^0.4"
rand = "^0.8"
mongodb = "1.2.2"
bson = "0.13.0"
data-finder = { git = "https://github.com/dgr113/data-finder.git", branch = "simplify-code-test" }
data-getter = { git = "https://github.com/dgr113/data-getter.git", branch = "master" }
