[package]
name = "data-composer"
version = "1.0.5"
authors = ["pewpew79 <grigoriev.d3@mail.ru>"]
edition = "2018"



[dependencies]
log = "^0.4"
rand = "^0.8"
serde_json = "^1.0"
serde_yaml = "^0.8"
bson = "1.2.1"
serde = { version = "^1.0", features = ["derive"] }
mongodb = { version = "1.2.2", features = ["sync"], default-features = false }
data-getter = { git = "https://github.com/dgr113/data-getter.git", branch = "master" }
data-finder = { git = "https://github.com/dgr113/data-finder.git", branch = "master" }



[profile.dev]
codegen-units = 128
opt-level = 1
incremental = true


[profile.release]
codegen-units = 1
opt-level = 3
incremental = false
